--- a/docs/files/manual/additions.css
+++ b/docs/files/manual/additions.css
@@ -65,3 +65,93 @@ video {
 .custom-form button {
   padding: 0.5em 1em;
 }
+
+/* New order button */
+
+.custom-order-button {
+  padding: 1rem 2rem;
+  border: none;
+  outline: none;
+  color: #fff;
+  background: #000;
+  font-size: 2rem;
+  font-weight: bold;
+  text-decoration: none;
+  text-transform: capitalize;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  border-radius: 2rem;
+  transition: 750ms;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.custom-order-button::before {
+  content: '';
+  background: linear-gradient(
+    45deg,
+    #ff0000,
+    #ff7300,
+    #fffb00,
+    #48ff00,
+    #00ffd5,
+    #002bff,
+    #7a00ff,
+    #ff00c8,
+    #ff0000
+  );
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  background-size: 400%;
+  z-index: -1;
+  filter: blur(15px);
+  -webkit-filter: blur(15px);
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  animation: glow 20s linear infinite;
+  transition: opacity 0.3s ease-in-out;
+  border-radius: 50%;
+}
+
+.custom-order-button::after {
+  z-index: -1;
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: radial-gradient(circle, rgb(0, 0, 0) 40%, rgb(88, 88, 88) 100%);
+  left: 0;
+  top: 0;
+  border-radius: 2rem;
+  transition: 750ms;
+}
+
+.custom-order-button:hover,
+.custom-order-button:active,
+.custom-order-button:focus {
+  background-color: white;
+  color: black;
+}
+
+.custom-order-button:hover::after,
+.custom-order-button:active::after,
+.custom-order-button:focus::after {
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+@keyframes glow {
+  0% {
+    background-position: 0 0;
+  }
+  50% {
+    background-position: 400% 0;
+  }
+  100% {
+    background-position: 0 0;
+  }
+}
