Applying custom button style to additional order button
Signed-off-by: Ivan Boothe <git@rootwork.org>

--- a/docs/files/manual/additions.css
+++ b/docs/files/manual/additions.css
@@ -69,7 +69,8 @@ video {
 /* New order button */
 
 .custom-order-button-container {
-  margin-top: 2rem;
+  margin-top: 1rem;
+  text-align: center;
 }
 
 .custom-order-button-container .custom-order-button,
