--- a/docs/files/manual/additions.css
+++ b/docs/files/manual/additions.css
@@ -46,6 +46,20 @@
   line-height: 32px !important;
 }
 
+/* Testimonial carousel fix on small screens */
+@media only screen and (max-width: 768px) {
+  #testimonials-display-page .carousel--testimonials .slide .content h3 {
+    margin: 0.5em 0 0 0.85em;
+    font-size: 20px !important;
+    font-weight: bold;
+  }
+
+  #testimonials-display-page .carousel--testimonials .slide .content p {
+    font-size: 16px;
+    line-height: 1.5;
+  }
+}
+
 iframe,
 video {
   max-width: 100% !important;
