Stand down, Squarespace remnants...
Signed-off-by: Ivan Boothe <git@rootwork.org>

--- a/docs/files/manual/additions.css
+++ b/docs/files/manual/additions.css
@@ -16,7 +16,7 @@
 .transparent-header.collection-type-index #header,
 .transparent-header.view-list #header,
 .transparent-header.collection-type-page #header {
-  background-color: #44165a;
+  background-color: #44165a !important;
 }
 
 /* Previous slide controls */
