--- a/docs/files/manual/additions.css
+++ b/docs/files/manual/additions.css
@@ -19,8 +19,10 @@
   background-color: #44165a !important;
 }
 
-.homepage #intro-display-section .index-top-bg .content.has-main-media h2:not(.OT_subtitle) {
-  font-size: clamp(2.125rem, 1.2321rem + 2.8571vw, 3.375rem);
+.homepage #siteWrapper .sqs-block-content h2.intro-text {
+  text-align: center;
+  margin-bottom: 1rem;
+  font-size: clamp(2.125rem, 1.2321rem + 2.8571vw, 3.375rem) !important;
   text-shadow:
     0 0 2px black,
     1px 1px 5px black,
